force-app/main/default/objects/Open_SOM_Requests__c/Open_SOM_Requests__c.object-meta.xml
<CustomObject>
    <label>Open SOM Requests</label>
    <nameField>
        <label>Open SOM Requests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open SOM Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>