force-app/main/default/objects/Open_SOM_Requests__c/fields/Change_Request_Ind__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Request Ind</label>
    <type>Checkbox</type>
</CustomField>