force-app/main/default/objects/Open_SOM_Requests__c/fields/Current_State_Age__c.field-meta.xml
<CustomField>
    <fullName>Current_State_Age__c</fullName>
    <label>Current State Age</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>