force-app/main/default/objects/Open_SOM_Requests__c/fields/Effective_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Time__c</fullName>
    <label>Effective Date Time</label>
    <type>Date</type>
</CustomField>