force-app/main/default/objects/Open_SOM_Requests__c/fields/Estimated_Value_FV__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value_FV__c</fullName>
    <label>Estimated Value(FV) Ent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>