force-app/main/default/objects/Open_SOM_Requests__c/fields/MCN__c.field-meta.xml
<CustomField>
    <fullName>MCN__c</fullName>
    <label>MCN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>