force-app/main/default/objects/Open_SOM_Requests__c/fields/Move_Request_Ind__c.field-meta.xml
<CustomField>
    <fullName>Move_Request_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Move Request Ind</label>
    <type>Checkbox</type>
</CustomField>