force-app/main/default/objects/Open_SOM_Requests__c/fields/Renewal_Activity_Request_Ind__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Activity_Request_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Activity Request Ind</label>
    <type>Checkbox</type>
</CustomField>