force-app/main/default/objects/Open_SOM_Requests__c/fields/SPOT_Approval_Ind__c.field-meta.xml
<CustomField>
    <fullName>SPOT_Approval_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPOT Approval Ind</label>
    <type>Checkbox</type>
</CustomField>