force-app/main/default/objects/Open_SOM_Requests__c/fields/T_M_Request_Ind__c.field-meta.xml
<CustomField>
    <fullName>T_M_Request_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T&amp;M Request Ind</label>
    <type>Checkbox</type>
</CustomField>