force-app/main/default/objects/Open_SOM_Requests__c/fields/Work_Request__c.field-meta.xml
<CustomField>
    <fullName>Work_Request__c</fullName>
    <label>Work Request</label>
    <length>20</length>
    <type>Text</type>
</CustomField>